[package]
name = "xelis-storm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
indexmap = "2.9.0"
lazy_static = "1.5.0"
log = "0.4.27"
rand = "0.9.1"
serde = "1.0.219"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
xelis_common = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_common" }
xelis_wallet = { git = "https://github.com/xelis-project/xelis-blockchain", branch = "dev", package = "xelis_wallet" }
